makes material .js/.css available with npm, inside the extra folder. (fixes #9)

--- a/demo/tabs/index.html
+++ b/demo/tabs/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Demo: Tabs</title>
-    <link rel="stylesheet" href="../material.css">
-    <script src="../material.js"></script>
+    <link rel="stylesheet" href="../../extra/material.css">
+    <script src="../../extra/material.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
