--- a/demo/grid/index.html
+++ b/demo/grid/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Demo: Grid</title>
-    <link rel="stylesheet" href="../material.css">
-    <script src="../material.js"></script>
+    <link rel="stylesheet" href="../../extra/material.css">
+    <script src="../../extra/material.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <style type="text/css">
 .demo-grid-ruler .mdl-cell,
