--- a/demo/index.html
+++ b/demo/index.html
@@ -52,6 +52,16 @@
     .code-sample ~ .code-sample {
       border-top: 1px solid rgba(0,0,0,0.2);
     }
+
+    .components > .mdl-layout {
+      position: relative;
+      height: 300px;
+      overflow-y: auto;
+    }
+    .example > .description {
+      background-color: white;
+      text-align: center;
+    }
     </style>
 </head>
 <body>
