Get demo back to working state

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,9 +8,8 @@
     <script src="../extra/material.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-    <link rel="stylesheet" href="//cdn.rawgit.com/isagalaev/highlight.js/master/src/styles/solarized_light.css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
-
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
     <style>
 /*    .components > * + * {
       margin-left: 16px;
