--- a/index.html
+++ b/index.html
@@ -7,37 +7,59 @@
     <script src="material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="prism.css">
-    <script src="https://npmcdn.com/react@0.14.3/dist/react.js"></script>
-    <script src="https://npmcdn.com/react-dom@0.14.3/dist/react-dom.js"></script>
+    <script src="https://npmcdn.com/react@0.14.7/dist/react.js"></script>
+    <script src="https://npmcdn.com/react-dom@0.14.7/dist/react-dom.js"></script>
+    <script src="https://npmcdn.com/dialog-polyfill/dialog-polyfill.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://npmcdn.com/dialog-polyfill/dialog-polyfill.css" />
     <style>
         pre {
             position: relative;
         }
-        .codepen-mover-button {
+        .codepen {
             position: absolute;
             top: 10px;
             right: 10px;
         }
-
-        .mdl-layout__drawer .mdl-layout-title {
-            position: relative;
-            background: #3f51b5;
-            height: 160px;
+        .codepen-mover-button {
+            position: absolute;
+            top: 0;
+            right: 0;
         }
 
-        .mdl-layout__drawer .drawer-separator {
+        #app > .mdl-layout > .mdl-layout__inner-container > .mdl-layout__drawer .drawer-separator {
             height: 1px;
             background-color: #dcdcdc;
             margin: 8px 0;
         }
 
-        .mdl-layout__drawer .mdl-navigation span.mdl-navigation__link {
+        #app > .mdl-layout > .mdl-layout__inner-container > .mdl-layout__drawer .mdl-navigation span.mdl-navigation__link {
             color: #3f51b5;
+        }
+
+        #app > .mdl-layout > .mdl-layout__inner-container > .mdl-layout__drawer .mdl-navigation a.mdl-navigation__link.active {
+            font-weight: 600;
+        }
+
+        .demo-big-content {
+            position: relative;
+            height: 300px;
+        }
+
+        .demo-big-content .page-content {
+            height: 600px;
         }
     </style>
 </head>
 <body>
     <div id="app"></div>
     <script src="app.js"></script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-73434705-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
 </html>
