new docs with gatsby

--- a/index.html
+++ b/index.html
@@ -1,71 +1,21 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>React-MDL: Documentation and examples</title>
-    <link rel="stylesheet" href="material.min.css">
-    <script src="material.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="prism.css">
-    <script src="https://npmcdn.com/react@0.14.7/dist/react.js"></script>
-    <script src="https://npmcdn.com/react-dom@0.14.7/dist/react-dom.js"></script>
-    <script src="https://npmcdn.com/dialog-polyfill/dialog-polyfill.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://npmcdn.com/dialog-polyfill/dialog-polyfill.css" />
-    <style>
-        pre {
-            position: relative;
-        }
-        .codepen {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-        }
-        .codepen-mover-button {
-            position: absolute;
-            top: 0;
-            right: 0;
-        }
-
-        #app > .mdl-layout > .mdl-layout__inner-container > .mdl-layout__drawer .drawer-separator {
-            height: 1px;
-            background-color: #dcdcdc;
-            margin: 8px 0;
-        }
-
-        #app > .mdl-layout > .mdl-layout__inner-container > .mdl-layout__drawer .mdl-navigation span.mdl-navigation__link {
-            color: #3f51b5;
-        }
-
-        #app > .mdl-layout > .mdl-layout__inner-container > .mdl-layout__drawer .mdl-navigation a.mdl-navigation__link.active {
-            font-weight: 600;
-        }
-
-        #app .mdl-data-table {
-            max-width: 100%;
-            margin: auto;
-            white-space: initial;
-        }
-
-        .demo-big-content {
-            position: relative;
-            height: 300px;
-        }
-
-        .demo-big-content .page-content {
-            height: 600px;
-        }
-    </style>
-</head>
-<body>
-    <div id="app"></div>
-    <script src="app.js"></script>
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-73434705-1', 'auto');
-        ga('send', 'pageview');
-    </script>
-</body>
-</html>
+ <html lang="en"><head><meta charset="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0"/><title>React-MDL: React Components for Material Design Lite</title><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/><script src="https://npmcdn.com/dialog-polyfill/dialog-polyfill.js"></script><link rel="stylesheet" type="text/css" href="https://npmcdn.com/dialog-polyfill/dialog-polyfill.css"/><link rel="stylesheet" href="/react-mdl/styles.css"/></head><body><div id="react-mount"><div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" style="z-index:100001;" data-reactid=".950sugxo1s" data-react-checksum="-2105806666"><header class="mdl-layout__header" data-reactid=".950sugxo1s.0"><div class="mdl-layout__header-row" data-reactid=".950sugxo1s.0.0"><span class="mdl-layout-title" data-reactid=".950sugxo1s.0.0.0"><a style="color:#fff;text-decoration:none;" class="" href="/react-mdl/" data-reactid=".950sugxo1s.0.0.0.0">React-MDL</a></span><div class="mdl-layout-spacer" data-reactid=".950sugxo1s.0.0.1"></div><nav class="mdl-navigation" data-reactid=".950sugxo1s.0.0.2"><a class="mdl-navigation__link" href="/react-mdl/components/" data-reactid=".950sugxo1s.0.0.2.$/=10">Components</a><a class="mdl-navigation__link" href="/react-mdl/templates/" data-reactid=".950sugxo1s.0.0.2.$/=11">Templates</a><a href="https://github.com/tleunen/react-mdl" class="mdl-navigation__link" data-reactid=".950sugxo1s.0.0.2.$/=12"><i class="material-icons" style="margin-right:8px;vertical-align:middle;" data-reactid=".950sugxo1s.0.0.2.$/=12.0">link</i><span data-reactid=".950sugxo1s.0.0.2.$/=12.1">GitHub</span></a></nav></div></header><div class="mdl-layout__content mdl-color-text--grey-600 mdl-color--grey-50" data-reactid=".950sugxo1s.1"><div class="mdl-grid mdl-grid--no-spacing" data-reactid=".950sugxo1s.1.0"><div class="mdl-cell mdl-cell--12-col" data-reactid=".950sugxo1s.1.0.0"><div class="markdown" data-reactid=".950sugxo1s.1.0.0.0"><div data-reactid=".950sugxo1s.1.0.0.0.1"><div class="center">
+<p><img src="./react.svg" alt="react logo"></p>
+<h1>React-MDL</h1>
+<h2>React Components for Material Design Lite</h2>
+<pre><code>
+npm install --save react-mdl
+</code></pre>
+<iframe src="https://ghbtns.com/github-btn.html?user=tleunen&repo=react-mdl&type=star&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+<iframe src="https://ghbtns.com/github-btn.html?user=tleunen&repo=react-mdl&type=fork&count=true" frameborder="0" scrolling="0" width="85px" height="20px"></iframe>
+<p>–</p>
+<p>See the components list to see what you can start using.</p>
+<p>And the templates to have real examples.</p>
+</div>
+</div></div></div></div></div></div></div><script src="/react-mdl/bundle.js"></script><script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-73434705-1', 'auto');
+ga('send', 'pageview');</script></body></html>
